gcc/testsuite/gm2/iso/fail/forloopbyzero.mod
MODULE forloopbyzero ;

CONST
   ConstExp = 10 - 10 ;

PROCEDURE test ;
VAR
   i: CARDINAL ;
BEGIN
   FOR i := 1 TO 10 BY ConstExp DO

   END
END test ;


BEGIN
   test
END forloopbyzero.
